# ros2_control

./: _offset = counts
controller_interface/: CMakeLists.txt  package.xml
controller_manager/: CMakeLists.txt  package.xml
controller_manager/include/controller_manager/: controller_manager.hpp
controller_manager/src/: controller_manager.cpp  ros2_control_node.cpp
hardware_interface/src/: component_parser.cpp  resource_manager.cpp
joint_limits_interface/: package.xml
rightbot_config_pkg/: CMakeLists.txt  package.xml
rightbot_config_pkg/bringup/config/: rightbot_test_controllers.yaml  rrbot_controllers.yaml  sherlock_controllers.yaml
rightbot_config_pkg/bringup/launch/: rightbot_sherlock.launch.py  rightbot_test.launch.py  rrbot_base.launch.py
rightbot_config_pkg/description/ros2_control/: rightbot_sherlock.ros2_control.xacro  rightbot_sherlock.ros2_control_old.xacro  rightbot_test.ros2_control.xacro  rrbot_modular_actuators.ros2_control copy 2.xacro  rrbot_modular_actuators.ros2_control copy.xacro  rrbot_modular_actuators.ros2_control.xacro  rrbot_modular_actuators.ros2_control_example.xacro  rrbot_modular_actuators.ros2_control_final_example.xacro  rrbot_modular_actuators.ros2_controlcopy3test.xacro
rightbot_config_pkg/description/urdf/: rightbot_sherlock.urdf.xacro  rightbot_test.urdf.xacro  rrbot_modular_actuators.urdf.xacro
rightbot_control_test/: CMakeLists.txt  package.xml
rightbot_control_test/config/: control_mode.json
rightbot_control_test/include/test/: test_urdf copy.hpp
rightbot_control_test/test/: main.cpp
rightbot_hardware_interface_pkgs/actuators/actuator/: CMakeLists.txt
rightbot_hardware_interface_pkgs/actuators/harmonic_motor_actuator/: package.xml
rightbot_hardware_interface_pkgs/actuators/harmonic_motor_actuator/src/: main.cpp
rightbot_hardware_interface_pkgs/actuators/motor_actuator/: CMakeLists.txt  motor_actuator_plugin_description.xml  package.xml
rightbot_hardware_interface_pkgs/actuators/motor_actuator/test/: main.cpp
rightbot_hardware_interface_pkgs/canopen_pkg/: CMakeLists.txt  package.xml
rightbot_hardware_interface_pkgs/canopen_pkg/include/canopen_pkg/: PDO.h  SDO.h
rightbot_hardware_interface_pkgs/canopen_pkg/src/: NMT.cpp  PDO.cpp
rightbot_hardware_interface_pkgs/config/: config.json
rightbot_hardware_interface_pkgs/gls_barcode/src/: gls_barcode.cpp
rightbot_hardware_interface_pkgs/motor/include/motor/: motor_controls.hpp  motor_feedback.hpp
rightbot_hardware_interface_pkgs/motor/src/: motor.cpp  motor_feedback.cpp  motor_interface.cpp
rightbot_hardware_interface_pkgs/rightbot_hardware_interface/: package.xml
rightbot_hardware_interface_pkgs/rightbot_hardware_interface_pkgs/: CMakeLists.txt  package.xml
rightbot_hardware_interface_pkgs/sensors/absolute_encoder/: package.xml
rightbot_hardware_interface_pkgs/sensors/absolute_encoder/src/: absolute_encoder_sockets.cpp  main.cpp
rightbot_hardware_interface_pkgs/sensors/barcode_sensor/: package.xml
rightbot_hardware_interface_pkgs/sensors/barcode_sensor/config/: read_data.json
rightbot_hardware_interface_pkgs/sensors/barcode_sensor/src/: barcode_sensor.cpp
rightbot_hardware_interface_pkgs/sensors/barcode_sensor/test/: main.cpp
rightbot_hardware_interface_pkgs/sensors/encoder_sensor/: CMakeLists.txt
rightbot_hardware_interface_pkgs/sensors/encoder_sensor/config/: config.json
rightbot_hardware_interface_pkgs/sensors/encoder_sensor/src/: encoder_sensor.cpp
rightbot_hardware_interface_pkgs/socketcan_pkg/: CMakeLists.txt  package.xml
rightbot_hardware_interface_pkgs/src/actuators/actuator/: CMakeLists.txt
rightbot_hardware_interface_pkgs/src/actuators/amc_motor_actuator/: CMakeLists.txt  amc_motor_actuator_plugin_description.xml  package.xml
rightbot_hardware_interface_pkgs/src/actuators/amc_motor_actuator_test/: CMakeLists.txt  package.xml
rightbot_hardware_interface_pkgs/src/actuators/dummy_actuator/: CMakeLists.txt  dummy_actuator_plugin_description.xml  harmonic_motor_actuator_plugin_description.xml  (+1 more)
rightbot_hardware_interface_pkgs/src/actuators/motor_actuator/: CMakeLists.txt  package.xml
rightbot_hardware_interface_pkgs/src/actuators/motor_actuator/include/motor_actuator/: motor_actuator.hpp
rightbot_hardware_interface_pkgs/src/actuators/motor_actuator/src/: motor_actuator.cpp
rightbot_hardware_interface_pkgs/src/actuators/motor_actuator/test/: main.cpp
rightbot_hardware_interface_pkgs/src/canopen_pkg/: CMakeLists.txt
rightbot_hardware_interface_pkgs/src/config/: config.json  config_copy.json
rightbot_hardware_interface_pkgs/src/gls_barcode/: CMakeLists.txt  package.xml
rightbot_hardware_interface_pkgs/src/motor/: CMakeLists.txt  package.xml
rightbot_hardware_interface_pkgs/src/motor/include/motor/: motor.hpp  motor_controls.hpp  motor_feedback.hpp  motor_interface.hpp  sockets.hpp
rightbot_hardware_interface_pkgs/src/motor/src/: motor.cpp  motor_controls.cpp  motor_feedback.cpp  sockets.cpp
rightbot_hardware_interface_pkgs/src/motor/test/: test_actuator_interface.cpp
rightbot_hardware_interface_pkgs/src/rightbot_hardware_interface/: CMakeLists.txt
rightbot_hardware_interface_pkgs/src/rightbot_hardware_interface/include/hardware_interface/: actuator.hpp  actuator_interface.hpp  resource_manager.hpp  sensor.hpp  sensor_interface.hpp
rightbot_hardware_interface_pkgs/src/rightbot_hardware_interface/include/hardware_interface/types/: hardware_interface_type_values.hpp
rightbot_hardware_interface_pkgs/src/rightbot_hardware_interface/src/: actuator.cpp  component_parser.cpp  resource_manager.cpp  sensor.cpp
rightbot_hardware_interface_pkgs/src/rightbot_interfaces/: CMakeLists.txt  package.xml
rightbot_hardware_interface_pkgs/src/test/: CMakeLists.txt  motor_actuator_plugin_description.xml  package.xml
rightbot_hardware_interface_pkgs/src/test/config/: config.json  write_data.json
rightbot_hardware_interface_pkgs/src/test/include/test/: test_urdf.hpp
rightbot_hardware_interface_pkgs/src/test/test/: main.cpp
ros2_control/: package.xml
transmission_interface/: CMakeLists.txt  package.xml
(+85 files in other folders)
